--- a/about-us.html
+++ b/about-us.html
@@ -442,7 +442,7 @@
             Sürətli, Dəqiq Hesabatlarınızı əldə edin.
           </div>
           <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
-            <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Why FA Consulting</a>
+            <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Niyə Biz?</a>
             <a href="./customers.html" class="white hover-cc fw-300 my-4 my-lg-0">Müştərilərimiz</a>
             <a href="./team.html" class="white hover-cc fw-300 my-4 my-lg-0">Komandamız</a>
           </div>
