--- a/insights.html
+++ b/insights.html
@@ -556,11 +556,11 @@
         <div class="container mb-70">
             <div class="row px-0 mx-0">
                 <div class="col-12 px-0 pos-rel">
-                    <h2 class="fs-1-9 mt-60 ">Featured topics</h2>
+                    <h2 class="fs-1-9 mt-60 "> Ən çox oxunanlar</h2>
 
                     <div class="swiper mt-5">
                         <div class="swiper-wrapper row">
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -581,7 +581,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -602,7 +602,28 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
+                                <div class="main-card">
+                                    <div class="image-wrapper">
+                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                                    </div>
+                                    <div class="text-wrapper p-4">
+                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                                        <a href="blog-3.html">
+                                            <p class="fs-2 primary my-4 fw-600">
+                                                Returning your business
+                                            </p>
+                                        </a>
+
+                                        <br />
+                                        <p class="card-info mt-2">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing
+                                            elit. Quis, temporibus?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -628,12 +649,12 @@
                         </div>
                     </div>
 
-                    <h2 class="fs-1-9">Latest articles</h2>
+                    <h2 class="fs-1-9"> Ən son yazılar</h2>
 
 
                     <div class="swiper mt-5">
                         <div class="swiper-wrapper row">
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -654,7 +675,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
@@ -675,7 +696,28 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
+                                <div class="main-card">
+                                    <div class="image-wrapper">
+                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                                    </div>
+                                    <div class="text-wrapper p-4">
+                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                                        <a href="./blog-2.html">
+                                            <p class="fs-2 primary my-4 fw-600">
+                                                Returning your business
+                                            </p>
+                                        </a>
+
+                                        <br />
+                                        <p class="card-info mt-2">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing
+                                            elit. Quis, temporibus?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
                                         <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
