--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             <div class="firm-overlay"></div>
             <p class="firm-title">Yeni trendlər nələrdir?</p>
             <div class="text-wrapper">
-              <a href="#">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
+              <a href="#">Vergi Məcəlləsində edilmiş <br> dəyişikliklər...</a>
             </div>
           </div>
           <div class="col-12 col-md-6 px-0">
