--- a/disclaimer.html
+++ b/disclaimer.html
@@ -291,7 +291,7 @@
                                 </a>
                                 <div class="menu industries d-flex" data-toggle="services-menu">
                                     <div class="col-3 lightgray-bg menu-nav-left">
-                                        <div class="wrapper d-flex flex-column align-items-center px-5">
+                                        <div class="wrapper d-flex flex-column  px-5">
                                             <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
                                             <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
                                             <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
@@ -447,7 +447,7 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Disclaimer</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Müəlliflik hüquqları</p>
                     </div>
                 </div>
             </div>
@@ -455,7 +455,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6    service-title">Disclaimer</div>
+                    <div class="col-6    service-title">Müəlliflik hüquqları</div>
 
                 </div>
             </div>
@@ -468,69 +468,18 @@
                     <div class="col-lg-12">
                         <div class="service-card-container d-flex flex-wrap">
                             <p class="fw-600 fs-2-4 main-title my-5">
-                                We make business personal.
+                                Müəlliflik hüquqları
                             </p>
                             <p class="text fs-2 my-1">
-                                Demographic, organisational and resourcing issues are radically changing the global
-                                healthcare industry. And we’re only just beginning to understand the impact of recent
-                                technological advances – in life science research, medical equipment, and the internet.
+                                FA Audit Consulting öz müştərilərinə audit, vergi və məsləhət xidmətləri göstərir və
+                                kontekstdən asılı olmayaraq qeyd olunan brendə istinad edir: Financial Academy Audit
+                                Consulting (FA Audit Consulting)
                             </p>
                             <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
+                                "FA Audit Consulting" adı və logosu daxil olmaqla FA Audit Consulting-in ticarət
+                                nişanlarıdır. Bütün müəllif hüquqları, o cümlədən FA Audit Consulting loqotipindəki
+                                müəllif hüquqları FA Audit Consulting-ə məxsusdur; bütün hüquqlar qorunur
                             </p>
-                            <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
-                            </p>
-                            <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
-                            </p>
-                            <p class="text fs-2 my-4">
-                                But healthcare businesses are rising to the challenge. Public sector providers are
-                                looking for ever greater efficiencies. Healthcare payers are revising business models
-                                and becoming more responsive. And pharmaceutical, life science and health IT firms are
-                                taking advantage of the openings that change always brings.
-                            </p>
-                            <ul class="ms-4 my-3">
-                                <p class="fw-600 ls-2 fs-2-5 my-5"> Transform Value</p>
-                                <p class="text fs-2 my-5">We also know that every organisation is different. Our
-                                    healthcare specialists apply
-                                    their sector understanding to provide advice and tailored solutions to achieve your
-                                    organisation’s goals, including:</p>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Define strategic goals and formulate solutions that keep you ahead of disruptive
-                                    change
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Help you sustain and finance growth, manage risk and talent, optimise operations and
-                                    protect value
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Improve financial processes and systems, reduce costs and transform your finance
-                                    function
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Remove the burden of back office operations and compliance challenges, enabling you
-                                    to focus on growth
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Deliver systematic improvements across people, processes and technology, right
-                                    through the supply
-                                    chain
-                                </li>
-                                <li class="fs-1-9 fw-500 my-3">
-                                    Engage, specify and deliver scalable technology solutions
-                                </li>
-                            </ul>
-
                         </div>
 
                     </div>
