--- a/team.html
+++ b/team.html
@@ -283,15 +283,18 @@
                 </a>
                 <div class="menu industries d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
-                    <div class="wrapper d-flex flex-column align-items-center px-5">
+                    <div class="wrapper d-flex flex-column  px-5">
                       <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
                       <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
                       <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
                       <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı,
+                        emal</a>
                       <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                      <a href="ticaret.html" class="primary hover-cc">Ticarət və
+                        Pərakəndəçilik</a>
+                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və
+                        hospitallar</a>
                     </div>
                   </div>
 
