--- a/index.html
+++ b/index.html
@@ -114,11 +114,10 @@
             </form>
             <a href="#" class="hover-cc primary toggleInput">
               Sizin Maliyyə Sabitliyiniz
-            </a>
-            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
-            <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
-            </a>
-            <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
+              <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+              <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
+              </a>
+              <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
           </div>
         </div>
       </div>
@@ -284,15 +283,18 @@
                 </a>
                 <div class="menu industries d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
-                    <div class="wrapper d-flex flex-column align-items-center px-5">
+                    <div class="wrapper d-flex flex-column  px-5">
                       <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
                       <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
                       <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
                       <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı,
+                        emal</a>
                       <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                      <a href="ticaret.html" class="primary hover-cc">Ticarət və
+                        Pərakəndəçilik</a>
+                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və
+                        hospitallar</a>
                     </div>
                   </div>
 
@@ -577,7 +579,7 @@
 
                       <br />
                       <p class="card-info mt-2">
-                        Mühasibat xidmətləri istənilən biznesin ən vacib xüsusiyyətlərindən biri hesab...
+                        Mühasibat xidmətləri istənilən biznesin ən vacib...
                       </p>
                     </div>
                   </div>
