--- a/insights.html
+++ b/insights.html
@@ -479,14 +479,14 @@
                                     <div>
                                         <input type="checkbox" id="checkbox-2-1"
                                             class="regular-checkbox big-checkbox " /><label for="checkbox-2-1"></label>
-                                        <div class="tag">Vergi</div>
+                                        <div class="tag">Vergİ</div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div>
                                         <input type="checkbox" id="checkbox-2-2"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-2"></label>
-                                        <div class="tag">Audit</div>
+                                        <div class="tag">Audİt</div>
                                     </div>
                                 </div>
 
@@ -494,7 +494,7 @@
                                     <div>
                                         <input type="checkbox" id="checkbox-2-3"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-3"></label>
-                                        <div class="tag">Maliyyə</div>
+                                        <div class="tag">Malİyyə</div>
                                     </div>
                                 </div>
                             </div>
@@ -516,7 +516,7 @@
 
                                 <div class="col-lg-4">
                                     <div>
-                                        <div class="tag">Mühasibat uçotu</div>
+                                        <div class="tag">Mühasİbat uçotu</div>
                                         <input type="checkbox" id="checkbox-2-7"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-7"></label>
 
@@ -534,7 +534,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div>
-                                        <div class="tag">Biznes</div>
+                                        <div class="tag">Bİznes</div>
                                         <input type="checkbox" id="checkbox-2-9"
                                             class="regular-checkbox big-checkbox" /><label for="checkbox-2-9"></label>
                                     </div>
