--- a/insights.html
+++ b/insights.html
@@ -563,20 +563,22 @@
                             <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                                        <div class="card-tag darkgray">BLOQ</div>
                                         <a href="blog-1.html">
                                             <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
+                                                Əmək haqqı və onun ödənilməsində yaranan çətinliklər
                                             </p>
                                         </a>
 
                                         <br />
                                         <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
+
+                                            Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin
+                                            yerinə yetirdiyi biridir...
+
                                         </p>
                                     </div>
                                 </div>
@@ -584,20 +586,21 @@
                             <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                                        <div class="card-tag darkgray">BLOQ</div>
                                         <a href="blog-2.html">
                                             <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
+                                                Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin Böyüməsini Necə
+                                                kömək edə bilər?
                                             </p>
                                         </a>
 
                                         <br />
                                         <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
+                                            Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini
+                                            saxlamaq...
                                         </p>
                                     </div>
                                 </div>
@@ -605,20 +608,19 @@
                             <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                                        <div class="card-tag darkgray">BLOQ</div>
                                         <a href="blog-3.html">
                                             <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
+                                                Auditdə analitikanın əhəmiyyəti nədir?
                                             </p>
                                         </a>
 
                                         <br />
                                         <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
+                                            Audit hər bir firmanın maliyyə vəziyyətini və mühasibat hesabatlarının...
                                         </p>
                                     </div>
                                 </div>
@@ -626,20 +628,24 @@
                             <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="blog-3.html">
+                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <a href="blog-4.html">
                                             <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
+
+                                                Biznesin planlaşdırılmasında və qərarların qəbul edilməsində mühasibat
+                                                uçotunun rolu nədir?
+
                                             </p>
                                         </a>
 
                                         <br />
                                         <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
+
+                                            Mühasibat xidmətləri istənilən biznesin ən vacib...
+
                                         </p>
                                     </div>
                                 </div>
@@ -649,7 +655,7 @@
                         </div>
                     </div>
 
-                    <h2 class="fs-1-9"> Ən son yazılar</h2>
+                    <h2 class="fs-1-9 mt-50"> Ən son yazılar</h2>
 
 
                     <div class="swiper mt-5">
@@ -657,83 +663,89 @@
                             <div class="col-lg-3">
                                 <div class="main-card">
                                     <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
                                     </div>
                                     <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
+                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <a href="blog-1.html">
+                                            <p class="fs-2 primary my-4 fw-600">
+                                                Əmək haqqı və onun ödənilməsində yaranan çətinliklər
+                                            </p>
+                                        </a>
+
+                                        <br />
+                                        <p class="card-info mt-2">
+
+                                            Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin
+                                            yerinə yetirdiyi biridir...
+
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="main-card">
+                                    <div class="image-wrapper">
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
+                                    </div>
+                                    <div class="text-wrapper p-4">
+                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <a href="blog-2.html">
+                                            <p class="fs-2 primary my-4 fw-600">
+                                                Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin Böyüməsini Necə
+                                                kömək edə bilər?
+                                            </p>
+                                        </a>
+
+                                        <br />
+                                        <p class="card-info mt-2">
+                                            Hər bir biznes firması biznesin bütün əməliyyatlarının qeydlərini
+                                            saxlamaq...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="main-card">
+                                    <div class="image-wrapper">
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
+                                    </div>
+                                    <div class="text-wrapper p-4">
+                                        <div class="card-tag darkgray">BLOQ</div>
+                                        <a href="blog-3.html">
+                                            <p class="fs-2 primary my-4 fw-600">
+                                                Auditdə analitikanın əhəmiyyəti nədir?
+                                            </p>
+                                        </a>
+
+                                        <br />
+                                        <p class="card-info mt-2">
+                                            Audit hər bir firmanın maliyyə vəziyyətini və mühasibat hesabatlarının...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <div class="main-card">
+                                    <div class="image-wrapper">
+                                        <img src="./assets/img/blog.jpg" alt="Formula driver" />
+                                    </div>
+                                    <div class="text-wrapper p-4">
+                                        <div class="card-tag darkgray">BLOQ</div>
                                         <a href="blog-4.html">
                                             <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
+
+                                                Biznesin planlaşdırılmasında və qərarların qəbul edilməsində mühasibat
+                                                uçotunun rolu nədir?
+
                                             </p>
                                         </a>
 
                                         <br />
                                         <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="./blog-1.html">
-                                            <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
-                                            </p>
-                                        </a>
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="./blog-2.html">
-                                            <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
-                                            </p>
-                                        </a>
+                                            Mühasibat xidmətləri istənilən biznesin ən vacib...
 
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3">
-                                <div class="main-card">
-                                    <div class="image-wrapper">
-                                        <img src="./assets/img/client-behaviour-300x300.jpg" alt="Formula driver" />
-                                    </div>
-                                    <div class="text-wrapper p-4">
-                                        <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                                        <a href="./blog-2.html">
-                                            <p class="fs-2 primary my-4 fw-600">
-                                                Returning your business
-                                            </p>
-                                        </a>
-
-                                        <br />
-                                        <p class="card-info mt-2">
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing
-                                            elit. Quis, temporibus?
                                         </p>
                                     </div>
                                 </div>
