--- a/services-accountment-3.html
+++ b/services-accountment-3.html
@@ -435,7 +435,7 @@
     <section id="service-head" class="pos-rel py-5">
       <div class="container">
         <div class="row">
-          <div class=" d-flex align-items-center">
+          <div class=" d-flex align-items-center f-direction-column f-direction-row">
             <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
             <p class="fs-1-9 primary hover-cc custom-before me-5">
               Xidmətlərimiz
