--- a/audit.html
+++ b/audit.html
@@ -532,7 +532,9 @@
                                 FA Audit Consulting audit xidməti və növləri
                             </p>
                             <p class="text fs-2 my-5">
-                                Audit xidmətləri FA Audit Consulting tərəfindən müştərilərinə göstərdiyi xidmətlərin
+                                Audit xidmətləri FA Audit Consulting tərəfindən müştərilərinə
+                                göstərdiyi
+                                xidmətlərin
                                 əsasını təşkil edir və multidissiplinar şirkətlərə yüksək keyfiyyətli audit servisləri
                                 təqdim edərək, dəyər və şəffaflıq təmin etmək üçün yeniliklər edir və bununla da unikal
                                 müştəri xidməti görstərir.
