--- a/services-accountment-1.html
+++ b/services-accountment-1.html
@@ -390,7 +390,7 @@
     <section id="service-head" class="pos-rel py-5">
       <div class="container">
         <div class="row">
-          <div class=" d-flex align-items-center">
+          <div class=" d-flex align-items-center f-direction-column">
             <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
             <p class="fs-1-9 primary hover-cc custom-before me-5">
               Xidmətlərimiz
@@ -511,7 +511,7 @@
           </div>
           <div class="col-12 col-lg-3">
             <div class="related-articles ">
-              <div class="fs-2-5 fw-600 ls-2">
+              <div class="fs-2-5 fw-600 ls-2 mobile-acc">
                 Bənzər Xəbərlər
               </div>
               <div class="article-card d-flex flex-column my-4">
