--- a/services-accountment-3.html
+++ b/services-accountment-3.html
@@ -501,7 +501,7 @@
           </div>
           <div class="col-12 col-lg-3">
             <div class="related-articles ">
-              <div class="fs-2-5 fw-600 ls-2">
+              <div class="fs-2-5 fw-600 ls-2 mobile-acc">
                 Bənzər Xəbərlər
               </div>
               <div class="article-card d-flex flex-column my-4">
