--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-2.html" style="color: #fff;"></a>
-                    <p class="fs-3 fw-600">Biznesin planlaşdırılmasınında mühasibat uçotunun rolu nədir?
+                    <p class="fs-3 mobile-fs-2 fw-600">Biznesin planlaşdırılmasınında mühasibat uçotunun rolu nədir?
                     </p>
                     <p class="info">Hər bir biznes firması biznesin...</p>
                     <i class="fas fa-arrow-right"></i>
@@ -414,7 +414,7 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-3.html" style="color: #fff;">
-                      <p class="fs-3 fw-600">Auditdə analitikanın əhəmiyyəti nədir?</p>
+                      <p class="fs-3 mobile-fs-2 fw-600">Auditdə analitikanın əhəmiyyəti nədir?</p>
                       <p class="info">Audit hər bir firmanın maliyyə...</p>
                       <i class="fas fa-arrow-right"></i>
                     </a>
@@ -423,7 +423,8 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-4.html" style="color: #fff;">
-                      <p class="fs-3 fw-600">Biznesin planlaşdırılmasında və qərarların qəbul edilməsində mühasibat
+                      <p class="fs-3 mobile-fs-2 fw-600">Biznesin planlaşdırılmasında və qərarların qəbul edilməsində
+                        mühasibat
                         uçotunun rolu nədir?</p>
                       <p class="info">Mühasibat xidmətləri istənilən biznesin </p>
                       <i class="fas fa-arrow-right"></i>
