--- a/about-us.html
+++ b/about-us.html
@@ -441,7 +441,7 @@
               <div class="personel-card-sub white my-3">
                 CEO
               </div>
-              <div class="mt-50">
+              <div class="mt-30">
                 <a href="seo-about-us.html">
                   <button class="btndefault btn-w border-w">
                     Haqqında Oxu
@@ -461,7 +461,7 @@
               <div class="personel-card-sub white my-3">
                 Dəyərli Müştərilərimizin siyahısı ilə tanış olun.
               </div>
-              <div class="mt-30">
+              <div>
                 <a href="customers.html">
                   <button class="btndefault btn-w border-w">
                     Bizə qoşulun
@@ -476,10 +476,10 @@
                 ">
               <div class="personel-card-title white">Komandamız</div>
               <div class="personel-card-info white mt-5">
-                Komandamızla Tanış Olun
+                Komandamızla Tanışın
               </div>
               <div class="personel-card-sub white my-3">
-                FA Audit Consulting insanlara inkişaf etmək imkanı verilən gənc və dinamik bir mühitdir.
+                FA Audit Consulting inkişaf üçün dinamik mühitdir.
               </div>
               <div>
                 <a href="team.html">
