--- a/contact.html
+++ b/contact.html
@@ -413,7 +413,7 @@
         </div>
         <div class="row">
           <form action="#"
-            class=" d-flex flex-wrap justify-content-between flex-column align-items-center flex-lg-row align-items-lg-start">
+            class=" d-flex flex-wrap justify-content-around flex-column align-items-center flex-lg-row align-items-lg-start">
             <div class="input-group my-4 my-lg-0">
               <label for="name">Adınız</label>
               <input id="name" type="text" required>
@@ -426,7 +426,7 @@
               <label for="phone">Telefon</label>
               <input id="phone" type="text" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" required>
             </div>
-            <div class="col-12 pos-rel">
+            <div class="col-12 pos-rel text-center">
               <textarea name="" id=""></textarea>
               <div class="textarea-label">
                 Müraciətiniz
@@ -446,7 +446,7 @@
       <div class="container px-0">
         <div class="row flex-column flex-lg-row">
           <div class="col-12 col-lg-6">
-            <img src="./assets/img/map-location.png" alt="">
+            <img src="./assets/img/map.jpeg" alt="">
           </div>
           <div
             class="col-12 col-lg-5 d-flex flex-column justify-content-between align-items-between align-items-lg-start  ps-5 my-5 my-lg-0">
