--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-1.html" style="color: #fff;">
-                      <p class="fs-2-5 fw-600">Əmək haqqı və onun ödənilməsində yaranan çətinliklər</p>
+                      <p class="fs-2-5 fw-600">Əmək haqqı ödənilməsindəki çətinliklər</p>
                       <p class="info">Əmək haqqının hesablanması ölçüsündən...</p>
                       <i class="fas fa-arrow-right"></i>
                     </a>
@@ -404,11 +404,12 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="text-wrapper">
-                    <a href="blog-2.html" style="color: #fff;"></a>
-                    <p class="fs-3 mobile-fs-2 fw-600">Biznesin planlaşdırılmasınında mühasibat uçotunun rolu nədir?
-                    </p>
-                    <p class="info">Hər bir biznes firması biznesin...</p>
-                    <i class="fas fa-arrow-right"></i>
+                    <a href="blog-2.html" style="color: #fff;">
+                      <p class="fs-3 mobile-fs-2 fw-600">Mühasibat Sisteminin 2022-ci İl Təhlili
+                      </p>
+                      <p class="info">Hər bir biznes firması biznesin...</p>
+                      <i class="fas fa-arrow-right"></i>
+                    </a>
                   </div>
                 </div>
                 <div class="swiper-slide">
@@ -423,9 +424,7 @@
                 <div class="swiper-slide">
                   <div class="text-wrapper">
                     <a href="blog-4.html" style="color: #fff;">
-                      <p class="fs-3 mobile-fs-2 fw-600">Biznesin planlaşdırılmasında və qərarların qəbul edilməsində
-                        mühasibat
-                        uçotunun rolu nədir?</p>
+                      <p class="fs-3 mobile-fs-2 fw-600">Biznes planlamasında mühasibatın rolu</p>
                       <p class="info">Mühasibat xidmətləri istənilən biznesin </p>
                       <i class="fas fa-arrow-right"></i>
                     </a>
@@ -463,7 +462,7 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
+                      <img src="./assets/img/1.jpeg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Vergi</div>
@@ -484,13 +483,13 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
+                      <img src="./assets/img/2.jpeg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Biznes</div>
                       <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
-                          Mühasibat Sisteminin Təhlili 2022-ci ildə Biznesinizin Böyüməsini Necə kömək edə bilər?
+                          Mühasibat Sisteminin 2022-ci İl Təhlili
                         </p>
                       </a>
 
@@ -504,7 +503,7 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
+                      <img src="./assets/img/3.jpeg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Audit</div>
@@ -524,13 +523,14 @@
                 <div class="swiper-slide">
                   <div class="main-card">
                     <div class="image-wrapper">
-                      <img src="./assets/img/blog.jpg" alt="Formula driver" />
+                      <img src="./assets/img/4.jpeg" alt="Formula driver" />
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">Biznes</div>
                       <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
-                          Biznesin planlaşdırılmasında və qərarların qəbul edilməsində mühasibat uçotunun rolu nədir?
+                          Biznes planlamasında mühasibatın rolu
+
                         </p>
                       </a>
 
